// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Average duration by browser when data is loaded returns the average duration by browser 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "x": 1599717600000,
        "y": 999000,
      },
      Object {
        "x": 1599717630000,
        "y": 1111000,
      },
      Object {
        "x": 1599717660000,
        "y": 600000,
      },
      Object {
        "x": 1599717690000,
      },
      Object {
        "x": 1599717720000,
      },
      Object {
        "x": 1599717750000,
        "y": 1487000,
      },
      Object {
        "x": 1599717780000,
        "y": 312000,
      },
      Object {
        "x": 1599717810000,
      },
      Object {
        "x": 1599717840000,
      },
      Object {
        "x": 1599717870000,
        "y": 2073000,
      },
      Object {
        "x": 1599717900000,
        "y": 791333.3333333334,
      },
      Object {
        "x": 1599717930000,
        "y": 604000,
      },
      Object {
        "x": 1599717960000,
      },
      Object {
        "x": 1599717990000,
        "y": 792000,
      },
      Object {
        "x": 1599718020000,
        "y": 596000,
      },
      Object {
        "x": 1599718050000,
        "y": 661000,
      },
      Object {
        "x": 1599718080000,
      },
      Object {
        "x": 1599718110000,
        "y": 1016000,
      },
      Object {
        "x": 1599718140000,
        "y": 732000,
      },
      Object {
        "x": 1599718170000,
      },
      Object {
        "x": 1599718200000,
      },
      Object {
        "x": 1599718230000,
        "y": 1578000,
      },
      Object {
        "x": 1599718260000,
        "y": 450000,
      },
      Object {
        "x": 1599718290000,
        "y": 911000,
      },
      Object {
        "x": 1599718320000,
      },
      Object {
        "x": 1599718350000,
        "y": 1599000,
      },
      Object {
        "x": 1599718380000,
        "y": 661000,
      },
      Object {
        "x": 1599718410000,
        "y": 596000,
      },
      Object {
        "x": 1599718440000,
      },
      Object {
        "x": 1599718470000,
        "y": 823000,
      },
      Object {
        "x": 1599718500000,
        "y": 551666.6666666666,
      },
      Object {
        "x": 1599718530000,
      },
      Object {
        "x": 1599718560000,
      },
      Object {
        "x": 1599718590000,
        "y": 1311000,
      },
      Object {
        "x": 1599718620000,
        "y": 574000,
      },
      Object {
        "x": 1599718650000,
      },
      Object {
        "x": 1599718680000,
      },
      Object {
        "x": 1599718710000,
        "y": 1806000,
      },
      Object {
        "x": 1599718740000,
        "y": 563000,
      },
      Object {
        "x": 1599718770000,
        "y": 665000,
      },
      Object {
        "x": 1599718800000,
      },
      Object {
        "x": 1599718830000,
        "y": 1202000,
      },
      Object {
        "x": 1599718860000,
        "y": 542666.6666666666,
      },
      Object {
        "x": 1599718890000,
        "y": 688000,
      },
      Object {
        "x": 1599718920000,
      },
      Object {
        "x": 1599718950000,
        "y": 995000,
      },
      Object {
        "x": 1599718980000,
        "y": 647000,
      },
      Object {
        "x": 1599719010000,
        "y": 552000,
      },
      Object {
        "x": 1599719040000,
      },
      Object {
        "x": 1599719070000,
        "y": 1760500,
      },
      Object {
        "x": 1599719100000,
        "y": 556000,
      },
      Object {
        "x": 1599719130000,
        "y": 603000,
      },
      Object {
        "x": 1599719160000,
      },
      Object {
        "x": 1599719190000,
        "y": 920000,
      },
      Object {
        "x": 1599719220000,
        "y": 523000,
      },
      Object {
        "x": 1599719250000,
      },
      Object {
        "x": 1599719280000,
      },
      Object {
        "x": 1599719310000,
        "y": 1074000,
      },
      Object {
        "x": 1599719340000,
        "y": 723500,
      },
      Object {
        "x": 1599719370000,
      },
      Object {
        "x": 1599719400000,
      },
      Object {
        "x": 1599719430000,
        "y": 1436000,
      },
      Object {
        "x": 1599719460000,
        "y": 614000,
      },
      Object {
        "x": 1599719490000,
        "y": 789000,
      },
      Object {
        "x": 1599719520000,
      },
      Object {
        "x": 1599719550000,
        "y": 1919000,
      },
      Object {
        "x": 1599719580000,
        "y": 881000,
      },
      Object {
        "x": 1599719610000,
      },
      Object {
        "x": 1599719640000,
      },
      Object {
        "x": 1599719670000,
        "y": 1083000,
      },
      Object {
        "x": 1599719700000,
        "y": 603000,
      },
      Object {
        "x": 1599719730000,
        "y": 906000,
      },
      Object {
        "x": 1599719760000,
      },
      Object {
        "x": 1599719790000,
        "y": 1222000,
      },
      Object {
        "x": 1599719820000,
        "y": 608000,
      },
      Object {
        "x": 1599719850000,
      },
      Object {
        "x": 1599719880000,
      },
      Object {
        "x": 1599719910000,
        "y": 805000,
      },
      Object {
        "x": 1599719940000,
        "y": 477000,
      },
      Object {
        "x": 1599719970000,
        "y": 652000,
      },
      Object {
        "x": 1599720000000,
      },
      Object {
        "x": 1599720030000,
        "y": 1417000,
      },
      Object {
        "x": 1599720060000,
        "y": 545250,
      },
      Object {
        "x": 1599720090000,
      },
      Object {
        "x": 1599720120000,
      },
      Object {
        "x": 1599720150000,
        "y": 1122000,
      },
      Object {
        "x": 1599720180000,
        "y": 686000,
      },
      Object {
        "x": 1599720210000,
        "y": 1978000,
      },
      Object {
        "x": 1599720240000,
        "y": 927000,
      },
      Object {
        "x": 1599720270000,
        "y": 2112500,
      },
      Object {
        "x": 1599720300000,
        "y": 776333.3333333334,
      },
      Object {
        "x": 1599720330000,
      },
      Object {
        "x": 1599720360000,
      },
      Object {
        "x": 1599720390000,
        "y": 914000,
      },
      Object {
        "x": 1599720420000,
        "y": 534500,
      },
      Object {
        "x": 1599720450000,
      },
      Object {
        "x": 1599720480000,
      },
      Object {
        "x": 1599720510000,
        "y": 930000,
      },
      Object {
        "x": 1599720540000,
        "y": 501000,
      },
      Object {
        "x": 1599720570000,
        "y": 801500,
      },
      Object {
        "x": 1599720600000,
      },
      Object {
        "x": 1599720630000,
        "y": 698000,
      },
      Object {
        "x": 1599720660000,
        "y": 626000,
      },
      Object {
        "x": 1599720690000,
      },
      Object {
        "x": 1599720720000,
      },
      Object {
        "x": 1599720750000,
        "y": 1091000,
      },
      Object {
        "x": 1599720780000,
        "y": 7822000,
      },
      Object {
        "x": 1599720810000,
      },
      Object {
        "x": 1599720840000,
      },
      Object {
        "x": 1599720870000,
        "y": 892000,
      },
      Object {
        "x": 1599720900000,
        "y": 591250,
      },
      Object {
        "x": 1599720930000,
      },
      Object {
        "x": 1599720960000,
      },
      Object {
        "x": 1599720990000,
        "y": 1096000,
      },
      Object {
        "x": 1599721020000,
        "y": 1087000,
      },
      Object {
        "x": 1599721050000,
      },
      Object {
        "x": 1599721080000,
      },
      Object {
        "x": 1599721110000,
        "y": 983000,
      },
      Object {
        "x": 1599721140000,
        "y": 801000,
      },
      Object {
        "x": 1599721170000,
      },
      Object {
        "x": 1599721200000,
      },
    ],
    "title": "Electron",
  },
]
`;

exports[`Average duration by browser when data is loaded returns the average duration by browser filtering by transaction name 2`] = `
Array [
  Object {
    "data": Array [
      Object {
        "x": 1599717600000,
        "y": 999000,
      },
      Object {
        "x": 1599717630000,
        "y": 1111000,
      },
      Object {
        "x": 1599717660000,
      },
      Object {
        "x": 1599717690000,
      },
      Object {
        "x": 1599717720000,
      },
      Object {
        "x": 1599717750000,
        "y": 1487000,
      },
      Object {
        "x": 1599717780000,
      },
      Object {
        "x": 1599717810000,
      },
      Object {
        "x": 1599717840000,
      },
      Object {
        "x": 1599717870000,
        "y": 1326000,
      },
      Object {
        "x": 1599717900000,
      },
      Object {
        "x": 1599717930000,
      },
      Object {
        "x": 1599717960000,
      },
      Object {
        "x": 1599717990000,
        "y": 792000,
      },
      Object {
        "x": 1599718020000,
      },
      Object {
        "x": 1599718050000,
      },
      Object {
        "x": 1599718080000,
      },
      Object {
        "x": 1599718110000,
        "y": 1016000,
      },
      Object {
        "x": 1599718140000,
      },
      Object {
        "x": 1599718170000,
      },
      Object {
        "x": 1599718200000,
      },
      Object {
        "x": 1599718230000,
        "y": 1578000,
      },
      Object {
        "x": 1599718260000,
      },
      Object {
        "x": 1599718290000,
      },
      Object {
        "x": 1599718320000,
      },
      Object {
        "x": 1599718350000,
        "y": 1020000,
      },
      Object {
        "x": 1599718380000,
      },
      Object {
        "x": 1599718410000,
      },
      Object {
        "x": 1599718440000,
      },
      Object {
        "x": 1599718470000,
        "y": 823000,
      },
      Object {
        "x": 1599718500000,
      },
      Object {
        "x": 1599718530000,
      },
      Object {
        "x": 1599718560000,
      },
      Object {
        "x": 1599718590000,
        "y": 1311000,
      },
      Object {
        "x": 1599718620000,
      },
      Object {
        "x": 1599718650000,
      },
      Object {
        "x": 1599718680000,
      },
      Object {
        "x": 1599718710000,
        "y": 1806000,
      },
      Object {
        "x": 1599718740000,
      },
      Object {
        "x": 1599718770000,
      },
      Object {
        "x": 1599718800000,
      },
      Object {
        "x": 1599718830000,
        "y": 1202000,
      },
      Object {
        "x": 1599718860000,
      },
      Object {
        "x": 1599718890000,
      },
      Object {
        "x": 1599718920000,
      },
      Object {
        "x": 1599718950000,
        "y": 995000,
      },
      Object {
        "x": 1599718980000,
      },
      Object {
        "x": 1599719010000,
      },
      Object {
        "x": 1599719040000,
      },
      Object {
        "x": 1599719070000,
        "y": 1110000,
      },
      Object {
        "x": 1599719100000,
      },
      Object {
        "x": 1599719130000,
      },
      Object {
        "x": 1599719160000,
      },
      Object {
        "x": 1599719190000,
        "y": 920000,
      },
      Object {
        "x": 1599719220000,
      },
      Object {
        "x": 1599719250000,
      },
      Object {
        "x": 1599719280000,
      },
      Object {
        "x": 1599719310000,
        "y": 1074000,
      },
      Object {
        "x": 1599719340000,
      },
      Object {
        "x": 1599719370000,
      },
      Object {
        "x": 1599719400000,
      },
      Object {
        "x": 1599719430000,
        "y": 902000,
      },
      Object {
        "x": 1599719460000,
      },
      Object {
        "x": 1599719490000,
      },
      Object {
        "x": 1599719520000,
      },
      Object {
        "x": 1599719550000,
        "y": 931000,
      },
      Object {
        "x": 1599719580000,
      },
      Object {
        "x": 1599719610000,
      },
      Object {
        "x": 1599719640000,
      },
      Object {
        "x": 1599719670000,
        "y": 1083000,
      },
      Object {
        "x": 1599719700000,
      },
      Object {
        "x": 1599719730000,
      },
      Object {
        "x": 1599719760000,
      },
      Object {
        "x": 1599719790000,
        "y": 1222000,
      },
      Object {
        "x": 1599719820000,
      },
      Object {
        "x": 1599719850000,
      },
      Object {
        "x": 1599719880000,
      },
      Object {
        "x": 1599719910000,
        "y": 805000,
      },
      Object {
        "x": 1599719940000,
      },
      Object {
        "x": 1599719970000,
      },
      Object {
        "x": 1599720000000,
      },
      Object {
        "x": 1599720030000,
        "y": 1417000,
      },
      Object {
        "x": 1599720060000,
      },
      Object {
        "x": 1599720090000,
      },
      Object {
        "x": 1599720120000,
      },
      Object {
        "x": 1599720150000,
        "y": 1122000,
      },
      Object {
        "x": 1599720180000,
      },
      Object {
        "x": 1599720210000,
      },
      Object {
        "x": 1599720240000,
        "y": 927000,
      },
      Object {
        "x": 1599720270000,
        "y": 1330000,
      },
      Object {
        "x": 1599720300000,
      },
      Object {
        "x": 1599720330000,
      },
      Object {
        "x": 1599720360000,
      },
      Object {
        "x": 1599720390000,
        "y": 914000,
      },
      Object {
        "x": 1599720420000,
      },
      Object {
        "x": 1599720450000,
      },
      Object {
        "x": 1599720480000,
      },
      Object {
        "x": 1599720510000,
        "y": 930000,
      },
      Object {
        "x": 1599720540000,
      },
      Object {
        "x": 1599720570000,
      },
      Object {
        "x": 1599720600000,
      },
      Object {
        "x": 1599720630000,
        "y": 698000,
      },
      Object {
        "x": 1599720660000,
      },
      Object {
        "x": 1599720690000,
      },
      Object {
        "x": 1599720720000,
      },
      Object {
        "x": 1599720750000,
        "y": 1091000,
      },
      Object {
        "x": 1599720780000,
      },
      Object {
        "x": 1599720810000,
      },
      Object {
        "x": 1599720840000,
      },
      Object {
        "x": 1599720870000,
        "y": 892000,
      },
      Object {
        "x": 1599720900000,
      },
      Object {
        "x": 1599720930000,
      },
      Object {
        "x": 1599720960000,
      },
      Object {
        "x": 1599720990000,
        "y": 1096000,
      },
      Object {
        "x": 1599721020000,
      },
      Object {
        "x": 1599721050000,
      },
      Object {
        "x": 1599721080000,
      },
      Object {
        "x": 1599721110000,
        "y": 983000,
      },
      Object {
        "x": 1599721140000,
      },
      Object {
        "x": 1599721170000,
      },
      Object {
        "x": 1599721200000,
      },
    ],
    "title": "Electron",
  },
]
`;
